[package]
name = "hardware"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Passthru API Support!
libc = "0.2.80"
j2534_rust = {git = "https://github.com/rnd-ash/J2534-Rust", branch="main" }
serde_json = "1.0.58"
libloading = "0.7.0"
lazy_static = "1.4.0"
shellexpand = "2.1.0"
serde = {version = "1.0.80", features = ["derive"]}